syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tenetmind.models";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message BalanceResponse {
  int32 balance = 1;
}

service BankService {
  rpc getBalance(BalanceCheckRequest) returns (BalanceResponse) {};
}

